--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 layout: index-post
 permalink: /blog/index.html
 title: Blog
-headline: Last Post
+headline: Last Blog Post
 description: "An archive of posts sorted by date."
 image:
   feature: default-head.jpg
